--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -29,5 +29,5 @@ jobs:
 
       - name: "push changes back to github"
         run:  |
-          . <(java -jar out/artifacts/buildTools.jar)
+          . <(java -jar buildTools.jar)
           pushBackToGithub "${{ secrets.GITHUB_TOKEN }}" "automation@modelingvalue.com" "adjusted files [by github actions]"
