--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -23,12 +23,12 @@ jobs:
 
       - name: "(re)generate some files"
         run:  |
-          . <(java -jar buildTools.jar)
+          . <(java -jar ~/buildTools.jar)
           correctEols
           correctHeaders header
           ./README-generator.sh >README.md
 
       - name: "push changes back to github"
         run:  |
-          . <(java -jar buildTools.jar)
+          . <(java -jar ~/buildTools.jar)
           pushBackToGithub "${{ secrets.GITHUB_TOKEN }}" "automation@modelingvalue.com" "adjusted files [by github actions]"
