regen README with gradle

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,4 +17,6 @@ jobs:
 
       ################################################################################
       - name: "build"
-        run: ./gradlew --info --scan
+        run: |
+          ./gradlew --info --scan
+          ./
