--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,4 @@ jobs:
 
       ################################################################################
       - name: "build"
-        run: |
-          ./gradlew --info --scan
-          ./
+        run: ./gradlew --info --scan
